Validation_TestIPs/HTA1024_test/solution1/solution1.log
==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020clg484-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Analyzing design file 'top.cc' ... 
WARNING: [HLS 200-40] In file included from top.cc:1:
top.cc:55:494: error: excess elements in array initializer
int req_list[128]={ 42, 65, 9, 128, 0, 33, 9, 9, 80, 5, 64, 80, 33, 5, 9, 129, 0, 5, 80, 2, 5, 33, 129, 3, 17, 16, 192, 17, 3, 5, 128, 33, 129, 3, 128, 3, 3, 17, 2, 5, 2, 9, 17, 2, 17, 72, 32, 224, 17, 16, 2, 3, 3, 192, 80, 33, 2, 256, 33, 96, 92, 512, 33, 9, 2, 128, 320, 9, 33, 9, 9, 32, 17, 65, 17, 17, 5, 512, 9, 0, 2, 480, 320, 12, 3, 9, 0, 3, 17, 9, 3, 17, 9, 18, 2, 8, 2, 33, 88, 9, 192, 112, 96, 5, 5, 2, 9, 17, 9, 17, 448, 112, 336, 18, 3, 5, 10, 2, 192, 3, 2, 5, 33, 2, 17, 9, 9, 5, 416, 33, 144, 17, 5, 17, 64, 5, 96, 240, 3, 5, 9, 768, 2, 9, 9, 4, 0, 5, 2, 256, 3, 17, 224, 5, 3, 9, 64, 3, 65, 256, 2, 9, 17, 704, 2, 544, 800, 33, 896, 33, 5, 9, 144, 704, 33, 17, 33, 120, 5, 2, 2, 33, 2, 5, 3, 64, 3, 84, 3, 832, 3, 2, 9, 17, 104, 3, 68, 3, 18, 288};
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             ^~~
top.cc:56:404: error: excess elements in array initializer
int req_cmd[128]={ 2, 2, 2, 3, 3, 2, 2, 2, 3, 2, 3, 3, 2, 2, 2, 2, 3, 2, 3, 2, 2, 2, 2, 2, 2, 3, 3, 2, 2, 2, 3, 2, 2, 2, 3, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 2, 3, 2, 2, 2, 3, 3, 2, 2, 3, 2, 3, 3, 3, 2, 2, 2, 3, 3, 2, 2, 2, 2, 3, 2, 2, 2, 2, 2, 3, 2, 3, 2, 3, 3, 3, 2, 2, 3, 2, 2, 2, 2, 2, 2, 3, 2, 3, 2, 2, 3, 2, 3, 3, 3, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 2, 2, 3, 2, 3, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 2, 3, 2, 2, 2, 3, 2, 3, 3, 2, 2, 2, 3, 2, 2, 2, 3, 3, 2, 2, 3, 2, 2, 3, 2, 2, 2, 3, 2, 2, 3, 2, 2, 2, 3, 2, 3, 3, 2, 3, 2, 2, 2, 3, 3, 2, 2, 2, 3, 2, 2, 2, 2, 2, 2, 2, 3, 2, 3, 2, 3, 2, 2, 2, 2, 3, 2, 3, 2, 3, 3};
                                                                                                                                                                                                                                                                                                                                                                                                                   ^
top.cc:57:426: error: excess elements in array initializer
int req_size[128]={ 0, 0, 0, 65, 42, 0, 0, 0, 9, 0, 9, 5, 0, 0, 0, 0, 33, 0, 9, 0, 0, 0, 0, 0, 0, 5, 33, 0, 0, 0, 33, 0, 0, 0, 33, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 17, 17, 0, 3, 0, 0, 0, 17, 5, 0, 0, 129, 0, 9, 3, 129, 0, 0, 0, 17, 33, 0, 0, 0, 0, 17, 0, 0, 0, 0, 0, 65, 0, 5, 0, 9, 33, 3, 0, 0, 2, 0, 0, 0, 0, 0, 0, 2, 0, 2, 0, 0, 2, 0, 33, 9, 9, 0, 0, 0, 0, 0, 0, 0, 17, 9, 9, 2, 0, 0, 2, 0, 17, 0, 0, 0, 0, 0, 0, 0, 0, 0, 17, 0, 9, 0, 0, 0, 5, 0, 5, 9, 0, 0, 0, 129, 0, 0, 0, 3, 3, 0, 0, 33, 0, 0, 9, 0, 0, 0, 5, 0, 0, 3, 0, 0, 0, 33, 0, 17, 17, 0, 65, 0, 0, 0, 5, 33, 0, 0, 0, 5, 0, 0, 0, 0, 0, 0, 0, 3, 0, 3, 0, 33, 0, 0, 0, 0, 5, 0, 2, 0, 2, 17};
                                                                                                                                                                                                                                                                                                                                                                                                                                         ^~
3 errors generated.\n
ERROR: [HLS 200-70] Compilation errors found: Pragma processor failed: In file included from top.cc:1:
top.cc:55:494: error: excess elements in array initializer
int req_list[128]={ 42, 65, 9, 128, 0, 33, 9, 9, 80, 5, 64, 80, 33, 5, 9, 129, 0, 5, 80, 2, 5, 33, 129, 3, 17, 16, 192, 17, 3, 5, 128, 33, 129, 3, 128, 3, 3, 17, 2, 5, 2, 9, 17, 2, 17, 72, 32, 224, 17, 16, 2, 3, 3, 192, 80, 33, 2, 256, 33, 96, 92, 512, 33, 9, 2, 128, 320, 9, 33, 9, 9, 32, 17, 65, 17, 17, 5, 512, 9, 0, 2, 480, 320, 12, 3, 9, 0, 3, 17, 9, 3, 17, 9, 18, 2, 8, 2, 33, 88, 9, 192, 112, 96, 5, 5, 2, 9, 17, 9, 17, 448, 112, 336, 18, 3, 5, 10, 2, 192, 3, 2, 5, 33, 2, 17, 9, 9, 5, 416, 33, 144, 17, 5, 17, 64, 5, 96, 240, 3, 5, 9, 768, 2, 9, 9, 4, 0, 5, 2, 256, 3, 17, 224, 5, 3, 9, 64, 3, 65, 256, 2, 9, 17, 704, 2, 544, 800, 33, 896, 33, 5, 9, 144, 704, 33, 17, 33, 120, 5, 2, 2, 33, 2, 5, 3, 64, 3, 84, 3, 832, 3, 2, 9, 17, 104, 3, 68, 3, 18, 288};
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             ^~~
top.cc:56:404: error: excess elements in array initializer
int req_cmd[128]={ 2, 2, 2, 3, 3, 2, 2, 2, 3, 2, 3, 3, 2, 2, 2, 2, 3, 2, 3, 2, 2, 2, 2, 2, 2, 3, 3, 2, 2, 2, 3, 2, 2, 2, 3, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 2, 3, 2, 2, 2, 3, 3, 2, 2, 3, 2, 3, 3, 3, 2, 2, 2, 3, 3, 2, 2, 2, 2, 3, 2, 2, 2, 2, 2, 3, 2, 3, 2, 3, 3, 3, 2, 2, 3, 2, 2, 2, 2, 2, 2, 3, 2, 3, 2, 2, 3, 2, 3, 3, 3, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 2, 2, 3, 2, 3, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 2, 3, 2, 2, 2, 3, 2, 3, 3, 2, 2, 2, 3, 2, 2, 2, 3, 3, 2, 2, 3, 2, 2, 3, 2, 2, 2, 3, 2, 2, 3, 2, 2, 2, 3, 2, 3, 3, 2, 3, 2, 2, 2, 3, 3, 2, 2, 2, 3, 2, 2, 2, 2, 2, 2, 2, 3, 2, 3, 2, 3, 2, 2, 2, 2, 3, 2, 3, 2, 3, 3};
                                                                                                                                                                                                                                                                                                                                                                                                                   ^
top.cc:57:426: error: excess elements in array initializer
int req_size[128]={ 0, 0, 0, 65, 42, 0, 0, 0, 9, 0, 9, 5, 0, 0, 0, 0, 33, 0, 9, 0, 0, 0, 0, 0, 0, 5, 33, 0, 0, 0, 33, 0, 0, 0, 33, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 17, 17, 0, 3, 0, 0, 0, 17, 5, 0, 0, 129, 0, 9, 3, 129, 0, 0, 0, 17, 33, 0, 0, 0, 0, 17, 0, 0, 0, 0, 0, 65, 0, 5, 0, 9, 33, 3, 0, 0, 2, 0, 0, 0, 0, 0, 0, 2, 0, 2, 0, 0, 2, 0, 33, 9, 9, 0, 0, 0, 0, 0, 0, 0, 17, 9, 9, 2, 0, 0, 2, 0, 17, 0, 0, 0, 0, 0, 0, 0, 0, 0, 17, 0, 9, 0, 0, 0, 5, 0, 5, 9, 0, 0, 0, 129, 0, 0, 0, 3, 3, 0, 0, 33, 0, 0, 9, 0, 0, 0, 5, 0, 0, 3, 0, 0, 0, 33, 0, 17, 17, 0, 65, 0, 0, 0, 5, 33, 0, 0, 0, 5, 0, 0, 0, 0, 0, 0, 0, 3, 0, 3, 0, 33, 0, 0, 0, 0, 5, 0, 2, 0, 2, 17};
                                                                                                                                                                                                                                                                                                                                                                                                                                         ^~
3 errors generated.
==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

